--- a/styles/main.css
+++ b/styles/main.css
@@ -28,6 +28,9 @@ li {
   position: relative;
   margin: auto;
   color: #fff; }
+  .header__container {
+    position: relative;
+    overflow: hidden; }
   .header__logo {
     margin: 0 32px 0 64px;
     width: 60px;
@@ -42,7 +45,8 @@ li {
   .header__nav-ul {
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex; }
+    display: flex;
+    height: 28px; }
   .header__nav-li {
     margin: 0 32px;
     -webkit-box-sizing: border-box;
@@ -72,6 +76,101 @@ li {
     height: 4px;
     background-color: #ff9c8e;
     margin-top: 4px; }
+  @media (max-width: 1024px) {
+    .header .header__nav {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-transform: translateX(-15px);
+              transform: translateX(-15px); }
+    .header .header__logo {
+      margin: 0;
+      margin-bottom: 30px; }
+    .header .header__nav-ul {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-pack: space-evenly;
+          -ms-flex-pack: space-evenly;
+              justify-content: space-evenly;
+      height: 28px;
+      width: 100%;
+      -webkit-transform: translateX(15px);
+              transform: translateX(15px);
+      max-width: 850px; }
+    .header .header__nav-li {
+      margin: 0; }
+    .header .header__hire-us-link {
+      margin: 0;
+      margin-top: 30px; } }
+  @media (max-width: 550px) {
+    .header .header__logo {
+      margin: auto;
+      z-index: 3; }
+    .header .header__nav {
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start;
+      -webkit-transform: translateX(0);
+              transform: translateX(0); }
+    .header .header__nav-ul {
+      -webkit-box-pack: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      -webkit-transform: translateX(103%);
+              transform: translateX(103%);
+      -webkit-transition: -webkit-transform 1s ease-in-out;
+      transition: -webkit-transform 1s ease-in-out;
+      transition: transform 1s ease-in-out;
+      transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+      position: absolute;
+      top: -49px;
+      height: 93vh;
+      min-height: 480px;
+      background-color: #008aff;
+      border-bottom-left-radius: 29%;
+      -webkit-box-shadow: -3px 1px 10px black;
+              box-shadow: -3px 1px 10px black; }
+    .header .header__nav-li {
+      margin: 5px 20px; }
+    .header .header__nav-link {
+      font-size: 23px;
+      font-weight: 600; }
+      .header .header__nav-link::after {
+        display: none; }
+    .header .header__nav-link--is-active {
+      color: #ff9c8e;
+      font-weight: 800;
+      font-size: 30px; }
+      .header .header__nav-link--is-active::after {
+        display: none; }
+    .header .header__hire-us-link {
+      width: 100%;
+      -webkit-transform: translateX(100%);
+              transform: translateX(100%);
+      -webkit-transition: -webkit-transform 1s ease-in-out;
+      transition: -webkit-transform 1s ease-in-out;
+      transition: transform 1s ease-in-out;
+      transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+      position: absolute;
+      bottom: -310px; }
+    .header .move-ul {
+      -webkit-transform: translateX(15px);
+              transform: translateX(15px); }
+    .header .move-hire-us {
+      -webkit-transform: translateX(0);
+              transform: translateX(0); } }
   .header__main {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -111,11 +210,65 @@ li {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    width: 50%;
+    width: 48%;
     max-width: 687px;
     height: 680px;
     border-top-left-radius: 200px;
     background-image: url("../images/slider/slide-img-1.jpg"); }
+  @media (max-width: 1024px) {
+    .header .header__main {
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+          -ms-flex-direction: column;
+              flex-direction: column; }
+    .header .header__description {
+      -ms-flex-item-align: start;
+          align-self: flex-start;
+      margin: 0; }
+    .header .header__slider {
+      -ms-flex-item-align: end;
+          align-self: flex-end; } }
+  @media (max-width: 550px) {
+    .header .header__slider {
+      display: none; }
+    .header .header__description {
+      display: block;
+      text-align: center;
+      margin: auto;
+      padding-bottom: 30px; }
+    .header .header__description-about {
+      margin-bottom: 30px; }
+    .header .header__btn-rectangle {
+      margin: auto; } }
+
+.burger-menu {
+  position: absolute;
+  right: 10px;
+  display: none;
+  z-index: 2; }
+  .burger-menu__item-1, .burger-menu__item-2, .burger-menu__item-3 {
+    width: 35px;
+    height: 4px;
+    background-color: white;
+    border-radius: 5px;
+    margin: 6px 0;
+    -webkit-transition: 0.4s;
+    transition: 0.4s; }
+
+.opend-menu .burger-menu__item-1 {
+  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
+          transform: rotate(-45deg) translate(-9px, 6px); }
+
+.opend-menu .burger-menu__item-2 {
+  opacity: 0; }
+
+.opend-menu .burger-menu__item-3 {
+  -webkit-transform: rotate(45deg) translate(-7px, -6px);
+          transform: rotate(45deg) translate(-7px, -6px); }
+
+@media (max-width: 550px) {
+  .burger-menu {
+    display: block; } }
 
 .intro {
   display: -webkit-box;
@@ -171,8 +324,13 @@ li {
     font-size: 14px;
     margin: 0 0 0 8px; }
 
+body *:focus {
+  -webkit-box-shadow: 1px 1px 14px white;
+          box-shadow: 1px 1px 14px white; }
+
 .limiter {
-  max-width: 1600px; }
+  max-width: 1600px;
+  margin: auto; }
 
 .h1-title {
   font-weight: 600;
@@ -180,6 +338,11 @@ li {
   line-height: 68px;
   letter-spacing: -2px;
   margin-bottom: 32px; }
+
+@media (max-width: 550px) {
+  .h1-title {
+    font-size: 35px;
+    margin-bottom: 15px; } }
 
 .btn-rectangle {
   display: block;
