--- a/styles/main.css
+++ b/styles/main.css
@@ -216,12 +216,22 @@ li {
     -webkit-box-pack: end;
         -ms-flex-pack: end;
             justify-content: flex-end;
-    width: 48%;
-    max-width: 687px;
-    height: 680px;
     border-top-left-radius: 200px;
-    background-image: url("../images/slider/slide-img-1.jpg"); }
-  @media (max-width: 1024px) {
+    position: relative;
+    max-width: 687px;
+    overflow: hidden; }
+  .header .slider__item {
+    width: calc(687px * 3);
+    height: 680px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    left: -687px;
+    right: 0;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out; }
+  @media (max-width: 1220px) {
     .header .header__main {
       -webkit-box-orient: vertical;
       -webkit-box-direction: normal;
@@ -280,7 +290,9 @@ li {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0 0 48px 48px; }
+  position: absolute;
+  left: 48px;
+  bottom: 48px; }
   .intro__arrows {
     display: -webkit-box;
     display: -ms-flexbox;
