--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,6 @@ li {
   .header__container {
     position: relative;
     overflow: hidden;
-    background: #008aff;
     border-bottom-left-radius: 200px;
     min-height: 480px; }
   .header__logo {
@@ -144,13 +143,14 @@ li {
       transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
       position: absolute;
       top: 0;
-      min-height: 480px;
+      min-height: 502px;
       background-color: #008aff;
       border-bottom-left-radius: 200px;
       -webkit-box-shadow: -3px 1px 10px black;
               box-shadow: -3px 1px 10px black; }
     .header .header__nav-item {
-      margin: 5px 20px; }
+      margin: 10px 20px;
+      text-align: center; }
     .header .header__nav-link {
       font-size: 23px;
       font-weight: 600; }
@@ -171,7 +171,7 @@ li {
       transition: transform 1s ease-in-out;
       transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
       position: absolute;
-      bottom: -310px; }
+      bottom: -350px; }
     .header .move-ul {
       -webkit-transform: translateX(0);
               transform: translateX(0); }
@@ -193,10 +193,10 @@ li {
     padding: 0 20px;
     max-width: 490px; }
   .header__description-about {
-    font-family: Open Sans, serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 18px;
-    margin-bottom: 56px;
-    max-width: 460px; }
+    margin-bottom: 83px;
+    max-width: 362px; }
   .header__btn-rectangle {
     -webkit-transition: background-color 0.2s linear, -webkit-box-shadow 0.2s linear;
     transition: background-color 0.2s linear, -webkit-box-shadow 0.2s linear;
@@ -261,10 +261,11 @@ li {
 
 .burger-menu {
   position: absolute;
-  right: 10px;
+  right: 15px;
+  top: 10px;
   display: none;
   z-index: 2; }
-  .burger-menu__item-1, .burger-menu__item-2, .burger-menu__item-3 {
+  .burger-menu__item-top, .burger-menu__item-middle, .burger-menu__item-bottom {
     width: 35px;
     height: 4px;
     background-color: white;
@@ -273,14 +274,14 @@ li {
     -webkit-transition: 0.4s;
     transition: 0.4s; }
 
-.opend-menu .burger-menu__item-1 {
+.opend-menu .burger-menu__item-top {
   -webkit-transform: rotate(-45deg) translate(-9px, 6px);
           transform: rotate(-45deg) translate(-9px, 6px); }
 
-.opend-menu .burger-menu__item-2 {
+.opend-menu .burger-menu__item-middle {
   opacity: 0; }
 
-.opend-menu .burger-menu__item-3 {
+.opend-menu .burger-menu__item-bottom {
   -webkit-transform: rotate(45deg) translate(-7px, -6px);
           transform: rotate(45deg) translate(-7px, -6px); }
 
@@ -288,20 +289,20 @@ li {
   .burger-menu {
     display: block; } }
 
-.intro {
+.slider__navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: absolute;
   left: 48px;
   bottom: 48px; }
-  .intro__arrows {
+  .slider__navigation__arrows {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-item-align: center;
         align-self: center; }
-  .intro__arrows-item {
+  .slider__navigation__arrows-item {
     width: 32px;
     height: 32px;
     display: -webkit-box;
@@ -320,29 +321,31 @@ li {
     transition: background-color 0.2s linear, -webkit-box-shadow 0.2s linear;
     transition: background-color 0.2s linear, box-shadow 0.2s linear;
     transition: background-color 0.2s linear, box-shadow 0.2s linear, -webkit-box-shadow 0.2s linear; }
-    .intro__arrows-item:hover {
+    .slider__navigation__arrows-item:hover {
       cursor: pointer;
       background-color: pink;
       -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
               box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5); }
-    .intro__arrows-item::before {
+    .slider__navigation__arrows-item::before {
       content: "";
       display: block;
       width: 5.56px;
       height: 9px; }
-  .intro__arrows-item--left::before {
+  .slider__navigation__arrows-item--left::before {
     background-image: url("../images/slider/arrow-left.svg"); }
-  .intro__arrows-item--right::before {
+  .slider__navigation__arrows-item--right::before {
     background-image: url("../images/slider/arrow-right.svg"); }
-  .intro__text-title {
+  .slider__navigation__text-title {
     font-weight: bold;
     font-size: 13px;
     letter-spacing: 3px;
     text-transform: uppercase;
     margin: 0 0 0 8px; }
-  .intro__text-description {
+  .slider__navigation__text-description {
     font-size: 14px;
-    margin: 0 0 0 8px; }
+    margin: 0 0 0 8px;
+    font-family: "Open Sans", serif;
+    max-width: 264px; }
 
 .welcome-overlay {
   background: #f2f9ff;
@@ -375,15 +378,13 @@ li {
   .welcome__title {
     text-align: center; } }
 
-.limiter {
-  margin: auto; }
-
-.h1-title {
+.first-title {
   font-weight: 600;
   font-size: 64px;
   line-height: 68px;
   letter-spacing: -2px;
-  margin-bottom: 32px; }
+  margin-bottom: 32px;
+  font-family: "Poppins", sans-serif; }
 
 @media (max-width: 550px) {
   .h1-title {
