--- a/styles/main.css
+++ b/styles/main.css
@@ -29,8 +29,6 @@ li {
   z-index: 1;
   margin: auto;
   color: #fff; }
-  .header__overlay {
-    background-color: #f2f9ff; }
   .header__container {
     position: relative;
     overflow: hidden;
@@ -353,13 +351,13 @@ li {
   padding-left: 15px;
   padding-right: 15px;
   position: relative;
-  -webkit-transform: translateY(-210px);
-          transform: translateY(-210px); }
+  margin-top: -201px; }
 
 .welcome {
   max-width: 754px;
   margin: auto;
-  margin-top: 148px; }
+  margin-top: 212px;
+  padding-bottom: 148px; }
   .welcome__title {
     font-size: 32px;
     color: #253757;
@@ -378,6 +376,202 @@ li {
   .welcome__title {
     text-align: center; } }
 
+.expertise {
+  margin-top: 128px;
+  padding-bottom: 105px; }
+  .expertise__title {
+    margin-bottom: 64px; }
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly; }
+  .card__img {
+    width: 184px;
+    height: 166px;
+    border-radius: 15px;
+    margin-bottom: 40px;
+    -webkit-transition: -webkit-transform 0.2s ease-in-out;
+    transition: -webkit-transform 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out;
+    transition: transform 0.2s ease-in-out, -webkit-transform 0.2s ease-in-out; }
+  .card__item {
+    width: 264px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 15px;
+    margin: 0 80px 50px;
+    -webkit-transition: background-color 0.2s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.2s ease-in-out;
+    transition: background-color 0.2s ease-in-out, transform 0.3s ease-in-out, box-shadow 0.2s ease-in-out, -webkit-transform 0.3s ease-in-out, -webkit-box-shadow 0.2s ease-in-out; }
+    .card__item:hover {
+      background-color: #f2f9ff;
+      -webkit-transform: scale(1.1);
+              transform: scale(1.1);
+      -webkit-box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5);
+              box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.5); }
+      .card__item:hover .card__img {
+        -webkit-transform: scale(1.2);
+                transform: scale(1.2);
+        -webkit-box-shadow: 0 6px 12px white;
+                box-shadow: 0 6px 12px white; }
+  .card__name {
+    font-weight: 600;
+    font-size: 20px;
+    color: #253757;
+    margin: 16px auto; }
+  .card__description {
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+    text-align: center;
+    color: #6c788b;
+    margin: 0; }
+
+.service {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 148px;
+  padding-bottom: 14px; }
+
+.service__description {
+  max-width: 362px; }
+  .service__description-main-title {
+    font-weight: bold;
+    font-size: 13px;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    color: #c0cdd7;
+    margin: 0; }
+  .service__description-secondary-title {
+    font-weight: 600;
+    font-size: 32px;
+    color: #253757;
+    margin-top: 16px;
+    margin-bottom: 24px; }
+  .service__description-text {
+    font-family: "Open Sans", sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    color: #6c788b; }
+
+.service__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 568px;
+  font-weight: 600; }
+  .service__card-item {
+    width: 264px;
+    height: 264px;
+    background: #fff;
+    -webkit-box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+            box-shadow: 0 9px 18px rgba(37, 41, 49, 0.03);
+    border-radius: 24px;
+    padding: 32px;
+    margin-bottom: 30px;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box; }
+    .service__card-item--1, .service__card-item--3 {
+      -webkit-transform: translateY(131px);
+              transform: translateY(131px); }
+  .service__card-item-number {
+    font-size: 13px;
+    border-radius: 23px;
+    width: 46px;
+    height: 24px;
+    display: block;
+    position: relative;
+    margin-bottom: 24px; }
+    .service__card-item-number::before {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+              transform: translate(-50%, -50%); }
+    .service__card-item-number--1 {
+      background-color: #eefafe; }
+      .service__card-item-number--1::before {
+        content: "001";
+        color: #56ccf2; }
+    .service__card-item-number--2 {
+      background-color: #fffae8; }
+      .service__card-item-number--2::before {
+        content: "002";
+        color: #fcc91d; }
+    .service__card-item-number--3 {
+      background-color: #e8fbed; }
+      .service__card-item-number--3::before {
+        content: "003";
+        color: #15d850; }
+    .service__card-item-number--4 {
+      background-color: #feefef; }
+      .service__card-item-number--4::before {
+        content: "004";
+        color: #f36363; }
+  .service__card-description {
+    font-family: "Open Sans", sans-serif;
+    font-size: 13px;
+    color: #6c788b;
+    width: 200px;
+    line-height: 150%; }
+  .service__card-button {
+    width: 40px;
+    height: 40px;
+    margin-top: 32px;
+    border-radius: 50%;
+    display: block;
+    background-color: #56ccf2;
+    position: relative; }
+    .service__card-button::after {
+      content: "Learn more";
+      position: absolute;
+      display: block;
+      left: 56px;
+      top: 50%;
+      -webkit-transform: translateY(-50%);
+              transform: translateY(-50%);
+      font-size: 15px;
+      text-align: center;
+      color: #334563;
+      width: 87px; }
+  .service__card-arrow {
+    width: 16px;
+    height: 16px;
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+            transform: translateY(-50%); }
+
+.blue-background-lay {
+  background-color: #f2f9ff; }
+
 .first-title {
   font-weight: 600;
   font-size: 64px;
@@ -385,6 +579,12 @@ li {
   letter-spacing: -2px;
   margin-bottom: 32px;
   font-family: "Poppins", sans-serif; }
+
+.second-title {
+  font-weight: 600;
+  font-size: 52px;
+  text-align: center;
+  color: #253757; }
 
 @media (max-width: 550px) {
   .h1-title {
@@ -400,5 +600,9 @@ li {
   background-color: #ff9c8e;
   text-align: center;
   line-height: 50px; }
+
+.limiter {
+  max-width: 1600px;
+  margin: auto; }
 
 /*# sourceMappingURL=main.css.map */
