--- a/styles/main.css
+++ b/styles/main.css
@@ -92,9 +92,7 @@ li {
               justify-content: center;
       -webkit-box-align: center;
           -ms-flex-align: center;
-              align-items: center;
-      -webkit-transform: translateX(-15px);
-              transform: translateX(-15px); }
+              align-items: center; }
     .header .header__logo {
       margin: 0;
       margin-bottom: 30px; }
@@ -220,14 +218,15 @@ li {
     position: relative;
     max-width: 687px;
     overflow: hidden; }
+  .header .slider__img {
+    max-width: 100%; }
   .header .slider__item {
-    width: calc(687px * 3);
+    max-width: 687px;
     height: 680px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     position: relative;
-    left: -687px;
     right: 0;
     -webkit-transition: all 1s ease-in-out;
     transition: all 1s ease-in-out; }
@@ -240,11 +239,16 @@ li {
     .header .header__description {
       -ms-flex-item-align: start;
           align-self: flex-start;
-      margin: 0; }
+      margin-left: 150px; }
     .header .header__slider {
       -ms-flex-item-align: end;
-          align-self: flex-end; } }
-  @media (max-width: 550px) {
+          align-self: flex-end;
+      margin-top: 40px; } }
+  @media (max-width: 1024px) {
+    .header .header__description,
+    .header .header__btn-rectangle {
+      margin: auto; } }
+  @media (max-width: 600px) {
     .header .header__slider {
       display: none; }
     .header .header__description {
@@ -348,8 +352,8 @@ li {
 .welcome-wrapper {
   background: #f2f9ff;
   padding-top: 200px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
   position: relative;
   margin-top: -201px; }
 
@@ -371,11 +375,19 @@ li {
     color: #6c788b;
     margin: 0; }
 
-@media (max-width: 550px) {
-  .welcome-wrapper {
-    padding-top: 125px; }
+@media (max-width: 1024px) {
   .welcome__title {
     text-align: center; } }
+
+@media (max-width: 550px) {
+  .welcome-wrapper {
+    padding-top: 80px; }
+  .welcome {
+    padding-bottom: 80px; }
+    .welcome__title {
+      text-align: center; }
+    .welcome__text {
+      font-size: 20px; } }
 
 .expertise {
   margin-top: 128px;
@@ -442,6 +454,10 @@ li {
     text-align: center;
     color: #6c788b;
     margin: 0; }
+
+@media (max-width: 550px) {
+  .expertise {
+    padding-bottom: 0; } }
 
 .service {
   display: -webkit-box;
@@ -586,6 +602,10 @@ li {
     -webkit-transform: translateY(0);
             transform: translateY(0); } }
 
+@media (max-width: 550px) {
+  .service {
+    padding-top: 70px; } }
+
 .approach {
   background-color: #ff9c8e;
   border-bottom-left-radius: 200px;
@@ -657,6 +677,24 @@ li {
     .approach__img {
       -ms-flex-item-align: end;
           align-self: flex-end; } }
+
+@media (max-width: 600px) {
+  .approach {
+    padding: 100px 25px; }
+    .approach__img {
+      display: none; } }
+
+@media (max-width: 500px) {
+  .approach__description-text-wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin-top: 40px; }
+  .approach__description {
+    margin: 0 auto; }
+  .card-block-title {
+    text-align: right; } }
 
 .testimonials-limiter {
   max-width: 1146px;
@@ -770,9 +808,13 @@ li {
     text-align: center;
     margin: 0; } }
 
+@media (max-width: 500px) {
+  .testimonials {
+    padding-top: 90px; } }
+
 .visionPassionResults {
   position: relative;
-  padding: 199px 0; }
+  padding: 199px 20px; }
   .visionPassionResults__square {
     border-radius: 500px;
     -webkit-transform: rotate(-65.1deg);
@@ -856,8 +898,10 @@ li {
       background-color: #008aff; }
 
 @media (max-width: 1000px) {
-  .visionPassionResults__square {
-    display: none; } }
+  .visionPassionResults {
+    padding: 100px 20px; }
+    .visionPassionResults__square {
+      display: none; } }
 
 .contactUs {
   background-color: #008aff;
@@ -875,7 +919,9 @@ li {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   max-width: 1600px;
-  margin-right: 200px; }
+  margin-right: 200px;
+  margin-bottom: 121px;
+  padding-bottom: 30px; }
   .form-contact__title {
     font-weight: 600;
     font-size: 32px;
@@ -914,7 +960,8 @@ li {
     margin-top: 80px; }
 
 .footer-form__item {
-  width: 460px;
+  max-width: 460px;
+  width: 100%;
   height: 40px;
   display: block;
   -webkit-box-sizing: border-box;
@@ -948,7 +995,8 @@ li {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin: 0;
+    margin-right: 0;
+    margin-bottom: 80px;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center; }
@@ -959,12 +1007,56 @@ li {
     .form-contact__contact {
       margin: 0;
       margin-top: 100px; }
+    .form-contact__icons {
+      margin: auto;
+      margin-top: 30px; }
     .form-contact__btn-rectangle {
       margin: auto; } }
 
+@media (max-width: 500px) {
+  .form-contact__title {
+    margin: auto;
+    margin-bottom: 39px;
+    max-width: 180px; } }
+
 .footer-nav {
   max-width: 1600px;
-  margin: auto; }
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  text-transform: uppercase; }
+  .footer-nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  .footer-nav-item:not(:last-child) {
+    margin-right: 64px; }
+
+@media (max-width: 750px) {
+  .footer-nav {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+    .footer-nav__logo {
+      margin-bottom: 20px; }
+  .footer-form__item {
+    margin: 0 auto 48px; } }
+
+@media (max-width: 650px) {
+  .footer-nav {
+    display: none; }
+  .form-contact {
+    margin-bottom: 0; } }
 
 .blue-background-lay {
   background-color: #f2f9ff; }
@@ -1013,5 +1105,15 @@ li {
 .limiter {
   max-width: 1600px;
   margin: auto; }
+
+@media (max-width: 1024px) {
+  .first-title {
+    font-size: 42px;
+    line-height: 45px; }
+  .second-title {
+    font-size: 32px; }
+  .third-title {
+    font-size: 30px;
+    line-height: 35px; } }
 
 /*# sourceMappingURL=main.css.map */
